# snack-card-reader

./: Cargo.toml
barcodes/: Cargo.toml
barcodes/src/: errors.rs  iter.rs  lib.rs
src/: barcode_stream.rs  disable.rs  errors.rs  event_stream.rs  lib.rs  llhw.rs  low_level_hw.rs  main.rs  server.rs
src/barcode/: event_iter.rs  iter.rs  mod.rs  scancodes.rs
src/barcodes/: hw.rs  mod.rs
src/server/: config.rs  mod.rs
swipe-server/: Cargo.toml
swipe-server/src/: errors.rs  index.html  main.rs
