[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "The card reader for the snack machine's card reader."
name = "snack-card-reader"
version = "0.1.0"

[[bin]]
doc = false
name = "snack-card-reader"

[dependencies]
bus = "^1.2.0"
byteorder = "^1.0.0"
clap = "^2.23.2"
env_logger = "^0.4.2"
error-chain = "^0.10.0"
hyper = "^0.10.8"
hyper-rustls = "^0.3.2"
ioctls = "^0.5.1"
log = "^0.3.7"
num = "^0.1.37"
rustls = "^0.5.8"
serde = "^0.9.13"
serde_derive = "^0.9.13"
toml = "^0.3.2"
void = "^1.0.2"

[replace]

[replace."ioctls:0.5.1"]
branch = "evdev-arm"
git = "https://github.com/acmumn/ioctl.git"
